// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/ConcertThumbnail default 1`] = `
<ThemeProvider
  theme={
    Object {
      "card": Object {
        "colors": Object {
          "primary": "#067df7",
        },
      },
      "colors": Object {
        "border": Object {
          "hover": "#067df7",
          "normal": "#9b9b9b",
        },
        "text": "#434343",
      },
    }
  }
>
  <ConcertThumbnail
    thumbnailURL="https://i.gyazo.com/45f12d6808968f95e27d959cc5ab34e4.png"
    title="sample"
  >
    <ConcertThumbnail__Image
      alt="sample"
      src="https://i.gyazo.com/45f12d6808968f95e27d959cc5ab34e4.png"
    >
      <StyledComponent
        alt="sample"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "ConcertThumbnail__Image-sc-9fuuh6-0",
              "isStatic": false,
              "lastClassName": "dxVdEf",
              "rules": Array [
                "height:100px;width:100px;border-radius:50%;",
              ],
            },
            "displayName": "ConcertThumbnail__Image",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "ConcertThumbnail__Image-sc-9fuuh6-0",
            "target": "img",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        src="https://i.gyazo.com/45f12d6808968f95e27d959cc5ab34e4.png"
      >
        <img
          alt="sample"
          className="ConcertThumbnail__Image-sc-9fuuh6-0 dxVdEf"
          src="https://i.gyazo.com/45f12d6808968f95e27d959cc5ab34e4.png"
        />
      </StyledComponent>
    </ConcertThumbnail__Image>
  </ConcertThumbnail>
</ThemeProvider>
`;

exports[`Storyshots components/ConcertThumbnail invalid image URL 1`] = `
<ThemeProvider
  theme={
    Object {
      "card": Object {
        "colors": Object {
          "primary": "#067df7",
        },
      },
      "colors": Object {
        "border": Object {
          "hover": "#067df7",
          "normal": "#9b9b9b",
        },
        "text": "#434343",
      },
    }
  }
>
  <ConcertThumbnail
    thumbnailURL="broken_url"
    title="invalid url"
  >
    <ConcertThumbnail__Image
      alt="invalid url"
      src="broken_url"
    >
      <StyledComponent
        alt="invalid url"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "ConcertThumbnail__Image-sc-9fuuh6-0",
              "isStatic": false,
              "lastClassName": "dxVdEf",
              "rules": Array [
                "height:100px;width:100px;border-radius:50%;",
              ],
            },
            "displayName": "ConcertThumbnail__Image",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "ConcertThumbnail__Image-sc-9fuuh6-0",
            "target": "img",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        src="broken_url"
      >
        <img
          alt="invalid url"
          className="ConcertThumbnail__Image-sc-9fuuh6-0 dxVdEf"
          src="broken_url"
        />
      </StyledComponent>
    </ConcertThumbnail__Image>
  </ConcertThumbnail>
</ThemeProvider>
`;
